[gd_scene load_steps=24 format=2]

[ext_resource path="res://Main Resources/Sonidos/Interfaz/bipSelect.wav" type="AudioStream" id=2]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/16 sin título_20220603214524.png" type="Texture" id=3]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/56 sin título_20220708140615.png" type="Texture" id=4]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/14 sin título_20220603120738.png" type="Texture" id=5]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/56 sin título_20220708140338.png" type="Texture" id=6]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/56 sin título_20220708140634.png" type="Texture" id=7]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/56 sin título_20220708140623.png" type="Texture" id=8]
[ext_resource path="res://Main Resources/Sprites/Interfaz/Menu/56 sin título_20220708140345.png" type="Texture" id=9]
[ext_resource path="res://Main Resources/Fuentes/PixelatedPusab.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Escenas/Interfaces/Menu/stats_window.gd" type="Script" id=11]

[sub_resource type="Shader" id=86]
code = "shader_type canvas_item;

uniform vec4 color : hint_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a == 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec2 uv = UV;
	
	if (add_margins) {
		vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
		
		uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
		
		if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
			COLOR.a = 0.0;
		} else {
			COLOR = texture(TEXTURE, uv);
		}
	} else {
		COLOR = texture(TEXTURE, uv);
	}
	
	if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
		COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
		COLOR.a += (1.0 - COLOR.a) * color.a;
	}
}"

[sub_resource type="ShaderMaterial" id=88]
shader = SubResource( 86 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/width = 2.539
shader_param/pattern = 2
shader_param/inside = false
shader_param/add_margins = true

[sub_resource type="DynamicFont" id=89]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxTexture" id=70]

[sub_resource type="StyleBoxTexture" id=71]

[sub_resource type="StyleBoxTexture" id=72]

[sub_resource type="StyleBoxTexture" id=73]

[sub_resource type="StyleBoxTexture" id=74]

[sub_resource type="StyleBoxTexture" id=75]

[sub_resource type="Theme" id=90]
HScrollBar/styles/grabber = SubResource( 70 )
HScrollBar/styles/grabber_highlight = SubResource( 70 )
HScrollBar/styles/grabber_pressed = SubResource( 70 )
HScrollBar/styles/scroll = SubResource( 70 )
HScrollBar/styles/scroll_focus = SubResource( 71 )
VScrollBar/styles/grabber = SubResource( 70 )
VScrollBar/styles/grabber_highlight = SubResource( 72 )
VScrollBar/styles/grabber_pressed = SubResource( 73 )
VScrollBar/styles/scroll = SubResource( 74 )
VScrollBar/styles/scroll_focus = SubResource( 75 )

[sub_resource type="AnimatedTexture" id=95]
flags = 4
frames = 4
fps = 3.0
frame_0/texture = ExtResource( 4 )
frame_1/texture = ExtResource( 8 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 7 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 8 )
frame_3/delay_sec = 0.0

[sub_resource type="DynamicFont" id=96]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Animation" id=94]
resource_name = "appear"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("window:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.517632, 1.03527 ),
"update": 0,
"values": [ Vector2( 109.5, -523.5 ), Vector2( 109.5, 44.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:X")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.22, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("black:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="stats_window" type="CanvasLayer"]
script = ExtResource( 11 )

[node name="black" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_lock_": true
}

[node name="window" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -402.5
margin_top = -255.5
margin_right = 402.5
margin_bottom = 255.5
__meta__ = {
"_edit_group_": true
}

[node name="Window" type="TextureRect" parent="window"]
material = SubResource( 88 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -392.0
margin_top = -256.5
margin_right = 392.0
margin_bottom = 256.5
texture = ExtResource( 5 )
expand = true

[node name="tittle" type="Label" parent="window"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -112.0
margin_top = 23.0
margin_right = 113.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 89 )
text = "Stats"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="BttnsScroll" type="ScrollContainer" parent="window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 86.0
margin_top = 73.0
margin_right = -82.0
margin_bottom = -51.0
theme = SubResource( 90 )
follow_focus = true
__meta__ = {
"_edit_lock_": true
}

[node name="container" type="VBoxContainer" parent="window/BttnsScroll"]
margin_right = 637.0
margin_bottom = 203.0
custom_constants/separation = 1

[node name="stat1" type="TextureButton" parent="window/BttnsScroll/container"]
margin_right = 637.0
margin_bottom = 50.0
texture_normal = ExtResource( 6 )
texture_focused = SubResource( 95 )
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="Label" parent="window/BttnsScroll/container/stat1"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -7.0
margin_right = 199.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.933333, 1, 0, 1 )
custom_fonts/font = SubResource( 96 )
text = "Saltos Totales:"

[node name="text2" type="Label" parent="window/BttnsScroll/container/stat1"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 440.0
margin_top = -7.0
margin_right = 623.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.933333, 1, 0, 1 )
custom_fonts/font = SubResource( 96 )
text = "0"
align = 2

[node name="stat2" type="TextureButton" parent="window/BttnsScroll/container"]
margin_top = 51.0
margin_right = 637.0
margin_bottom = 101.0
texture_normal = ExtResource( 9 )
texture_focused = SubResource( 95 )
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="Label" parent="window/BttnsScroll/container/stat2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -7.0
margin_right = 199.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.933333, 1, 0, 1 )
custom_fonts/font = SubResource( 96 )
text = "Intentos totales:"

[node name="text2" type="Label" parent="window/BttnsScroll/container/stat2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 440.0
margin_top = -7.0
margin_right = 623.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.933333, 1, 0, 1 )
custom_fonts/font = SubResource( 96 )
text = "0"
align = 2

[node name="stat3" type="TextureButton" parent="window/BttnsScroll/container"]
margin_top = 102.0
margin_right = 637.0
margin_bottom = 152.0
texture_normal = ExtResource( 6 )
texture_focused = SubResource( 95 )
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="Label" parent="window/BttnsScroll/container/stat3"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -7.0
margin_right = 199.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.933333, 1, 0, 1 )
custom_fonts/font = SubResource( 96 )
text = "Personajes descubiertos:"

[node name="text2" type="Label" parent="window/BttnsScroll/container/stat3"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 440.0
margin_top = -7.0
margin_right = 623.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.933333, 1, 0, 1 )
custom_fonts/font = SubResource( 96 )
text = "0"
align = 2

[node name="stat4" type="TextureButton" parent="window/BttnsScroll/container"]
margin_top = 153.0
margin_right = 637.0
margin_bottom = 203.0
texture_normal = ExtResource( 9 )
texture_focused = SubResource( 95 )
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="Label" parent="window/BttnsScroll/container/stat4"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -7.0
margin_right = 199.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.933333, 1, 0, 1 )
custom_fonts/font = SubResource( 96 )
text = "Niveles desbloqueados:"

[node name="text2" type="Label" parent="window/BttnsScroll/container/stat4"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 440.0
margin_top = -7.0
margin_right = 623.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.933333, 1, 0, 1 )
custom_fonts/font = SubResource( 96 )
text = "0"
align = 2

[node name="cadena" type="TextureRect" parent="window"]
margin_left = 104.0
margin_top = -113.0
margin_right = 144.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="cadena2" type="TextureRect" parent="window"]
margin_left = 662.0
margin_top = -113.0
margin_right = 702.0
margin_bottom = 16.0
texture = ExtResource( 3 )

[node name="focus" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="animacion" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/appear = SubResource( 94 )
